--- a/views/todos.mustache
+++ b/views/todos.mustache
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Todo App</title>
   </head>
   <body>
+    <form class="todo-create" action="/todo" method="post">
+      <input type="text" name="todo" value="">
+      <input type="submit" name="submit" value="Create Todo">
+    </form>
+
     {{#todos}}
       {{name}}
+      {{completed}}
     {{/todos}}
   </body>
 </html>
