--- a/views/todos.mustache
+++ b/views/todos.mustache
@@ -11,9 +11,10 @@
       <input type="submit" name="submit" value="Create Todo">
     </form>
 
-    {{#todos}}
-      {{name}}
-      {{completed}}
-    {{/todos}}
+    <ul>
+      {{#todos}}
+        <li> {{name}} | {{completed}} </li>
+      {{/todos}}
+    </ul>
   </body>
 </html>
