separated list of completed and not completed

--- a/views/todos.mustache
+++ b/views/todos.mustache
@@ -13,7 +13,17 @@
 
     <ul>
       {{#todos}}
-        <li> {{name}} | {{completed}} </li>
+        {{^completed}}
+          <li> <div class='mark-complete-button'>Mark Completed</div> {{name}} </li>
+        {{/completed}}
+      {{/todos}}
+    </ul>
+
+    <ul>
+      {{#todos}}
+        {{#completed}}
+          <li> {{name}} </li>
+        {{/completed}}
       {{/todos}}
     </ul>
   </body>
