Change button text to Mark Complete instead of id

--- a/views/todos.mustache
+++ b/views/todos.mustache
@@ -16,7 +16,7 @@
         {{^completed}}
           <li>
             <form class="todo-complete" action="/todo/{{id}}" method="post">
-              <input name="todo" value="{{id}}" type="submit"> {{name}}
+              <input name="todo" value="Mark Complete" type="submit"> {{name}}
             </form>
           </li>
         {{/completed}}
